--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -1,10 +1,11 @@
 @import "fonts.scss";
 
-
-body{
+*{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+}
+body{
     background: #F9FAF5;
 }
 
